<resources>

    <string name="app_name">M.I.T.I.</string>
    <string name="text_welcome">Welcome to M.I.T.I.</string>

    <!-- ACTIVITIES -->

    <string name="title_activity_authorize">M.I.T.I.</string>
    <string name="title_activity_start">Главная</string>
    <string name="title_activity_cart">Корзина</string>
    <string name="title_activity_category">Категории</string>
    <string name="title_activity_recipe">Страница пецепта</string>
    <string name="title_activity_recipes">Рецепты</string>
    <string name="title_activity_favourites">Нравится</string>
    <string name="title_activity_search">Поиск</string>
    <string name="title_activity_reg">Регистрация</string>

    <!-- TITLES -->

    <string name="title_main">Лента</string>
    <string name="title_home">Рецепты</string>
    <string name="title_recipe">Рецепт</string>
    <string name="title_kbju">КБЖУ</string>
    <string name="title_ingredient">Ингредиенты</string>
    <string name="title_restaurants">Рестораны</string>
    <string name="title_notifications">Избранное</string>
    <string name="title_profile">Профиль</string>
    <string name="title_category">Категории</string>
    <string name="title_cart">Корзина</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_suggest">Предложить</string>
    <string name="title_calories">Калорийность</string>
    <string name="title_dish_type">Вид блюда</string>
    <string name="title_kitchen">Кухня</string>
    <string name="title_calories_any">Любая</string>
    <string name="title_cooking_time">Время приготовления</string>
    <string name="title_cooking_time_any">Любое</string>
    <string name="title_low_calories">ПОДБОРКА ДЛЯ ТЕХ, КОМУ НЕ НУЖНЫ КАЛОРИИ</string>
    <string name="title_fast_and_delicious">Вкусно, а главное - быстро</string>

    <!-- TEXT -->

    <string name="text_password">Пароль:</string>
    <string name="text_step_number">1</string>
    <string name="text_step_name">Шаг</string>
    <string name="text_recipe"> Важным условием настоящей пиццы bbq является ее запекание на углях или дровах. Для этого существуют специальные печи. Только тогда лепешка приобретет вкус и аромат дымка. Рецептуру можно менять по своим вкусовым пристрастиям.</string>
    <string name="text_recipe_description">Важным условием настоящей пиццы bbq является ее запекание на углях или дровах. Для этого существуют специальные печи. Только тогда лепешка приобретет вкус и аромат дымка. Рецептуру можно менять по своим вкусовым пристрастиям.Важным условием настоящей пиццы bbq является ее запекание на углях или дровах. Для этого существуют специальные печи. Только тогда лепешка приобретет вкус и аромат дымка. Рецептуру можно менять по своим вкусовым пристрастиям. Важным условием настоящей пиццы bbq является ее запекание на углях или дровах. Для этого существуют специальные печи. Только тогда лепешка приобретет вкус и аромат дымка. Рецептуру можно менять по своим вкусовым пристрастиям. ля этого существуют специальные печи.</string>
    <string name="text_profile_account">Аккаунт</string>
    <string name="text_profile_rate">Оценки</string>
    <string name="text_profile_seen">Просмотренные</string>
    <string name="text_profile_my_recipes">Мои рецепты</string>
    <string name="text_profile_settings">Настройки</string>
    <string name="text_profile_developers">Написать разработчикам</string>
    <string name="text_profile_rate_app">Оценить приложение</string>
    <string name="text_profile_about">О приложении</string>
    <string name="text_profile_edit">ред.</string>
    <string name="text_suggest_empty">У вас пока нет рецептов</string>
    <string name="text_suggest_save">Сохранить</string>
    <string name="text_suggest_sheet_name">Наименование</string>
    <string name="text_suggest_sheet_description">Здесь можно добавить описание блюда!</string>
    <string name="text_suggest_description">Описание</string>
    <string name="text_suggest_step_description">Описание шага</string>
    <string name="text_suggest_title">Название</string>
    <string name="text_registration_checkbox">Я согласен с пользовательским соглашением</string>
    <string name="text_ampersand">&amp;</string>
    <string name="text_search_apply">Показать</string>
    <string name="text_fast_and_delicious">Нет времени на готовку? Подборка для вас!</string>
    <string name="text_tab_recipes">Рецепты</string>
    <string name="text_tab_restaurants">Рестораны</string>
    <string name="text_metro_station1">Юго-Западная</string>
    <string name="text_login_guest">Войти как гость</string>
    <string name="text_have_account">У меня есть аккаунт</string>
    <string name="text_forgot_password">Забыли пароль?</string>
    <string name="text_cart_dialog">Удалить рецепт?</string>
    <string name="text_yes">Да</string>
    <string name="text_no">Нет</string>

    <!-- MENU -->

    <string name="menu_basket">Добавить</string>
    <string name="menu_like">Нравится</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_filter">Фильтры</string>
    <string name="menu_close">Выйти</string>

    <!-- BUTTONS -->

    <string name="btn_signIn">Войти</string>
    <string name="btn_signOut">Выйти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_registration">Регистрация</string>
    <string name="btn_add">Добавить</string>

    <!-- HINTS -->

    <string name="hint_name">Имя</string>
    <string name="hint_username">Логин</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_login_or_email">Логин или E-Mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_search">Блюда, категории, калории</string>
    <string name="hint_search_enter_ingredient">Введите ингредиент</string>
    <string name="hint_KBJU">"???"</string>

    <!-- KBJU FRAGMENT -->

    <string name="f_calories">кКал</string>
    <string name="f_proteins">Белки</string>
    <string name="f_fats">Жиры</string>
    <string name="f_carbo">Угл.</string>
    <string name="f_calories_inside">Cal</string>
    <string name="f_proteins_inside">Pr</string>
    <string name="f_fats_inside">Fa</string>
    <string name="f_carbo_inside">Ca</string>

    <!-- PROFILE -->

    <string name="profile_settings">Настройки</string>
    <string name="profile_notifications">Уведомления</string>
    <string name="profile_my_recipe">Мои рецепты</string>
    <string name="profile_about_us">КОНТАКТЫ</string>
    <string name="profile_share">ПОДЕЛИТЬСЯ</string>
    <string name="profile_rate_app">ОЦЕНИТЬ</string>


    <!-- EXAMPLE -->

    <string name="example">example</string>
    <string name="example_fullname">Константинопольский Константин</string>
    <string name="example_email">example@email.com</string>
    <string name="example_cooking_time">0 ч. 0 мин.</string>
    <string name="example_ingredient_amount">1200г.</string>
    <string name="example_recipe_name">Тигровые креветки под соусом Песто</string>
    <string name="example_recipe_kitchen">Международная</string>
    <string name="example_recipe_rating">Рейтинг: 4.7</string>

    <!-- CONTENT DESCRIPTION -->

    <string name="content_description_empty">Content</string>
    <string name="content_no_calories">ПОДБОРКА ДЛЯ ТЕХ, КОМУ НЕ НУЖНЫ КАЛОРИИ</string>
    <string name="content_dish_of_the_day">БЛЮДО ДНЯ</string>
    <string name="content_dish_of_the_day_description">Насладитесь вкусным ужином всей семьей</string>

</resources>
