<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bean_icon"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/offer_recipe_icon"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/favourites_icon"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/recipe_basket"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

</menu>
