<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/profileCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/marginDefault"
        android:layout_gravity="end"
        android:background="@color/design_default_color_background"
        android:src="@drawable/ic_profile_close"
        android:contentDescription="@string/content_description_empty" />

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/marginDefault"
        android:layout_marginTop="@dimen/marginDefault"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/profileEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/text_profile_edit"
            android:textColor="@color/primaryColor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profileImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="@dimen/marginDefault"
                android:layout_marginVertical="@dimen/marginDefault"
                android:scaleType="centerCrop"
                app:riv_corner_radius="45dp"
                android:src="@drawable/image_pic1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/profileImage">

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/marginDefault"
                    android:text="@string/example_fullname"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/profileName"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/example_email"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"/>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ratingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:text="@string/text_profile_rate"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:drawableStartCompat="@drawable/ic_star_red" />

    <TextView
        android:id="@+id/myRecipesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:text="@string/text_profile_seen"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:drawableStartCompat="@drawable/ic_profile_seen" />

    <TextView
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:text="@string/text_profile_my_recipes"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:drawableStartCompat="@drawable/ic_taskboard_red" />

    <TextView
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:text="@string/text_profile_settings"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:drawableStartCompat="@drawable/ic_profile_settings" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginEnd="@dimen/marginDefault"
        android:layout_marginTop="32dp"
        android:background="@color/dividerColor" />

    <TextView
        android:id="@+id/contactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:drawablePadding="13dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/text_profile_developers"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_profile_developers" />

    <TextView
        android:id="@+id/rateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:drawablePadding="13dp"
        android:focusable="true"
        android:text="@string/text_profile_rate_app"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:drawableStartCompat="@drawable/ic_profile_rate_app" />

    <TextView
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:text="@string/text_profile_about"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:drawableStartCompat="@drawable/ic_about_red" />

</LinearLayout>