<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/cabinetFragmentToolbar"
        android:layout_height="@dimen/toolbar_default"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="44dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="30dp"
                    tools:text="Имя профиля" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/dividerColor"/>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:id="@+id/btn_settings"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/profile_settings" />

            <TextView
                android:fontFamily="@font/roboto_light"
                android:id="@+id/btn_notifications"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/profile_notifications"/>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:id="@+id/btn_recipes"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/profile_my_recipe"/>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:id="@+id/btn_about"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/profile_about_us" />

            <TextView
                android:fontFamily="@font/roboto_light"
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/profile_share"/>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:id="@+id/btn_rate_app"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="14dp"
                android:text="@string/profile_rate_app"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>