<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearStepTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/recipeStepTitle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"
            app:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:text="@string/text_step_name" />

        <TextView
            android:id="@+id/recipeStepNumber"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/shape_lound_login"
            android:gravity="center"
            android:fontFamily="@font/roboto_light"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/text_step_number"/>

    </LinearLayout>

    <TextView
        android:id="@+id/recipeStepDescription"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="72dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearStepTop"
        android:fontFamily="@font/roboto_thin"
        android:layout_centerHorizontal="true"
        android:text="@string/text_recipe"
        android:textColor="@color/black"
        android:textAlignment="textStart" />

</RelativeLayout>